--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="front-end.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button></button>
+<div class="feed">
+  
+  </div>
+</div>
   
 </body>
 </html>
