--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button></button>
+  <form action="http://localhost:8000" method="get">
+   
+    <input type="text" id="muscle-group">
+    <input type="text" id="lvl">
+    <button type="button" id="submut" onclick="createWorkout()">Submit</button>
+  </form>
+  <form>
+    <input type="text" id="user_name">
+    <button type="button" id="log-in" onclick="createUserDiv()">Log In</button>
+  </form>
+ 
 <div class="feed">
   
   </div>
